eks/quick-cluster/base/test/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infra-test
  labels:
    purpose: validation
